--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.8.1
 black==24.4.0
 click==8.1.7
-Django==5.0.4
+Django==4.2.10
 django-environ==0.11.2
 djangorestframework==3.15.1
 exceptiongroup==1.2.0
@@ -11,6 +11,7 @@ packaging==24.0
 pathspec==0.12.1
 platformdirs==4.2.0
 pluggy==1.4.0
+psycopg2-binary==2.9.9
 pytest==8.1.1
 pytest-django==4.8.0
 sqlparse==0.5.0
