Readme and urls

--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,5 @@
 DEBUG=on
-SECRET_KEY=some_key
+SECRET_KEY=sdnsjdhjdhjsdhjsdjsdhj1
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
